--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                             <a class="nav-link active" href="#">Home</a>
                         </li>
                         <li class="nav-item font-exo">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item font-exo">
-                            <a class="nav-link " href="#">Contact</a>
+                            <a class="nav-link " href="#experience">experience</a>
                         </li>
                         <li class="nav-item font-exo">
-                            <a class="nav-link" href="#">Footer</a>
+                            <a class="nav-link" href="#opinion">opinion</a>
                         </li>
                     </ul>
                     <button class="btn btn-color font-exo btn-width m-lg-0 mt-3 " type="submit">Search</button>
@@ -71,7 +71,7 @@
 
     </header>
 
-    <section class="m-0 my-auto py-5">
+    <section class="m-0 my-auto py-5" id="about">
         <h2 class="main-white-color mx-lg-5 mx-auto mb-5 text-lg-start text-center">why choose us</h2>
         <div
             class="d-flex justify-content-lg-evenly flex-lg-row gap-lg-0 flex-column justify-content-center align-items-center gap-3">
@@ -94,7 +94,7 @@
 
     </section>
 
-    <section class="section-background m-0 my-auto py-5">
+    <section class="section-background m-0 my-auto py-5" id="experience">
         <h2 class="main-white-color mx-lg-5 mx-auto mb-5 text-lg-start text-center">we team of experience</h2>
         <div
             class="d-flex justify-content-lg-evenly flex-lg-row gap-lg-0 flex-column justify-content-center align-items-center gap-3">
@@ -157,7 +157,7 @@
         </div>
     </section>
     <!-- read -->
-    <section class="section-background m-0 my-auto py-5 px-3 px-lg-0">
+    <section class="section-background m-0 my-auto py-5 px-3 px-lg-0" id="opinion">
         <h2 class="main-white-color mx-lg-5 mx-auto mb-5 text-lg-start text-center ">Read What Other have to Say</h2>
 
         <div id="carouselExampleIndicators" class="carousel slide ">
@@ -312,7 +312,7 @@
             <div class="col-lg-2 col-12 d-flex flex-column  main-white-color">
                 <h4>PROGRAMS</h4>
                 <ul>
-                    <li>Art & Design</li>
+                    <li>Design</li>
                     <li>Business</li>
                     <li>Languages</li>
                     <li>Programming</li>
@@ -321,7 +321,7 @@
             <div class="col-lg-2 col-12 d-flex flex-column main-white-color">
                 <h4>SOFTWARE</h4>
                 <ul>
-                    <li>Art & Design</li>
+                    <li>Design</li>
                     <li>Business</li>
                     <li>IT & Software</li>
                 </ul>
