--- a/index.html
+++ b/index.html
@@ -279,23 +279,21 @@
                     elit. Ut ipsa autem quibusdam mollitia odit ducimus
                     omnis quos architecto accusantium nemo?</p>
                 <div class="social-media d-flex  align-items-center gap-3">
-                    <div class="circle d-flex justify-content-center align-items-center"> <img
-                            src="./assets/image/facebook.svg" alt="facebook" class="w-50"></div>
-                    <div class="circle d-flex justify-content-center align-items-center"> <img
-                            src="./assets/image/instagram.svg" alt="instagram" class="w-50"></div>
-                    <div class="circle d-flex justify-content-center align-items-center"> <img
-                            src="./assets/image/twitter-x.svg" alt="twitter-x" class="w-50"></div>
+                    <div class="circle d-flex flex-column justify-content-center align-items-center"> 
+                        <i class="bi bi-facebook fs-4 color-icon-black" ></i> </div>
+                    <div class="circle d-flex justify-content-center align-items-center"> <i class="bi bi-instagram fs-4 color-icon-black"  ></i></div>
+                    <div class="circle d-flex justify-content-center align-items-center"> <i class="bi bi-twitter-x  fs-4 color-icon-black" ></i></div>
                     <a href="mailto:nooralkhouli99@gmail.com">
                         <div class="circle d-flex justify-content-center align-items-center">
 
-                            <img src="./assets/image/envelope-fill.svg" alt="email" class="w-50">
+                            <i class="bi bi-envelope-fill fs-4 color-icon-black"></i>
 
                         </div>
                     </a>
 
                     <a href="tel:">
-                        <div class="circle d-flex justify-content-center align-items-center"> <img
-                                src="./assets/image/telephone-fill.svg" alt="telephone" class="w-50">
+                        <div class="circle d-flex justify-content-center align-items-center">
+                            <i class="bi bi-telephone-fill  fs-4 color-icon-black"></i>
 
                         </div>
                     </a>
