--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <a class="nav-link" href="#opinion">opinion</a>
                         </li>
                     </ul>
-                    <button class="btn btn-color font-exo btn-width m-lg-0 mt-3 " type="submit">Search</button>
+                    <button class="btn btn-color font-exo btn-width m-lg-0 mt-3 p-2 " type="submit">Search</button>
                 </div>
             </div>
         </nav>
@@ -61,8 +61,8 @@
                 <p class="font-exo paragraph">Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Nostrum velit voluptatem ad adipisci.</p>
                 <div class="d-flex justify-content-center align-items-center gap-lg-4 gap-2">
-                    <button type="submit" class="btn btn-color font-exo active">Lorem ipsum</button>
-                    <button type="submit" class="btn btn-color font-exo ">Lorem ipsum</button>
+                    <button type="submit" class="btn btn-color font-exo active px-lg-4 py-lg-3">Lorem ipsum</button>
+                    <button type="submit" class="btn btn-color font-exo  px-lg-4 py-lg-3">Lorem ipsum</button>
                 </div>
             </div>
 
@@ -71,24 +71,24 @@
 
     </header>
 
-    <section class="m-0 my-auto py-5" id="about">
+    <section class="m-0 my-auto py-5 " id="about">
         <h2 class="main-white-color mx-lg-5 mx-auto mb-5 text-lg-start text-center">why choose us</h2>
         <div
             class="d-flex justify-content-lg-evenly flex-lg-row gap-lg-0 flex-column justify-content-center align-items-center gap-3">
             <div
-                class="card rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-5">
-                <img src="./assets/image/icon1.svg" alt="">
-                <h5 class="card-title font-exo main-white-color ">Special title treatment</h5>
+                class="card-2 rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-4">
+                <i class="bi bi-code-square icon-solution "></i>
+                <h5 class="card-title font-exo main-white-color ">developer, development, software</h5>
             </div>
             <div
-                class="card rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-5">
-                <img src="./assets/image/icon1.svg" alt="">
-                <h5 class="card-title font-exo main-white-color ">Special title treatment</h5>
+                class="card-2 rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-4">
+                <i class="bi bi-terminal icon-solution "></i>
+                <h5 class="card-title font-exo main-white-color "> Special title command - line </h5>
             </div>
             <div
-                class="card rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-5">
-                <img src="./assets/image/icon1.svg" alt="">
-                <h5 class="card-title font-exo main-white-color ">Special title treatment</h5>
+                class="card-2 rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-4">
+                <i class="bi bi-bug icon-solution"></i>
+                <h5 class="card-title font-exo main-white-color ">Special tittle insect,error</h5>
             </div>
         </div>
 
@@ -98,23 +98,56 @@
         <h2 class="main-white-color mx-lg-5 mx-auto mb-5 text-lg-start text-center">we team of experience</h2>
         <div
             class="d-flex justify-content-lg-evenly flex-lg-row gap-lg-0 flex-column justify-content-center align-items-center gap-3">
-            <div
-                class="card rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-4">
-                <span class="material-symbols-outlined  main-white-color fw-medium icon-solution">
-                    question_exchange </span>
-                <h5 class="card-title font-exo main-white-color ">Special title treatment</h5>
+            <div class="card  rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-1"
+                style="width: 18rem;">
+                <div class="d-flex flex-column gap-2 justify-content-center align-items-center">
+                    <div class="square d-flex align-items-center justify-content-center mt-3"><span
+                            class="material-symbols-outlined  main-white-color fw-medium icon-solution">
+                            question_exchange </span>
+                    </div>
+                    <h3>TechLumis</h3>
+                </div>
+
+                <div class="card-body ">
+                    <p>Some quick example text to build on the card title and make up the bulk of the
+                        content.</p>
+                    <button type="submit" class="btn btn-color font-exo rounded-5 active px-4 py-3">Show More</button>
+
+                </div>
             </div>
-            <div
-                class="card rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-4">
-                <span class="material-symbols-outlined main-white-color  fw-medium icon-solution">
-                    security </span>
-                <h5 class="card-title font-exo main-white-color ">Special title treatment</h5>
+            <div class="card  rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-1"
+                style="width: 18rem;">
+                <div class="d-flex flex-column gap-2 justify-content-center align-items-center">
+                    <div class="square d-flex align-items-center justify-content-center mt-3"><span
+                            class="material-symbols-outlined main-white-color  fw-medium icon-solution">
+                            security </span>
+                    </div>
+                    <h3>TechLumis</h3>
+                </div>
+
+                <div class="card-body">
+                    <p>Some quick example text to build on the card title and make up the bulk of the
+                        content.</p>
+                    <button type="submit" class="btn btn-color font-exo rounded-5 active px-4 py-3">Show More</button>
+
+                </div>
             </div>
-            <div
-                class="card rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-4">
-                <span class="material-symbols-outlined main-white-color  fw-medium icon-solution">
-                    manufacturing </span>
-                <h5 class="card-title font-exo main-white-color ">Special title treatment</h5>
+            <div class="card  rounded-4 d-flex flex-column  align-items-center justify-content-center text-center  gap-1"
+                style="width: 18rem;">
+                <div class="d-flex flex-column gap-2 justify-content-center align-items-center">
+                    <div class="square d-flex align-items-center justify-content-center mt-3"><span
+                            class="material-symbols-outlined main-white-color  fw-medium icon-solution">
+                            manufacturing </span>
+                    </div>
+                    <h3>TechLumis</h3>
+                </div>
+
+                <div class="card-body">
+                    <p>Some quick example text to build on the card title and make up the bulk of the
+                        content.</p>
+                    <button type="submit" class="btn btn-color font-exo rounded-5 active px-4 py-3">Show More</button>
+
+                </div>
             </div>
         </div>
 
@@ -184,8 +217,8 @@
                         </div>
                         <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
                             <p class="card-text main-white-color m-0">Some quick example text to build on</p>
-                            <button type="submit" class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem
-                                ipsum</button>
+                            <button type="submit"
+                                class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem1</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
@@ -200,8 +233,8 @@
                         </div>
                         <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
                             <p class="card-text main-white-color m-0">Some quick example text to build on</p>
-                            <button type="submit" class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem
-                                ipsum</button>
+                            <button type="submit"
+                                class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem2</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
@@ -216,8 +249,8 @@
                         </div>
                         <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
                             <p class="card-text main-white-color m-0">Some quick example text to build on</p>
-                            <button type="submit" class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem
-                                ipsum</button>
+                            <button type="submit"
+                                class="btn btn-color font-exo active w-50 text-nowrap p-2">lorem3</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
@@ -232,8 +265,8 @@
                         </div>
                         <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
                             <p class="card-text main-white-color m-0">Some quick example text to build on</p>
-                            <button type="submit" class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem
-                                ipsum</button>
+                            <button type="submit"
+                                class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem4</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
@@ -248,8 +281,8 @@
                         </div>
                         <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
                             <p class="card-text main-white-color m-0">Some quick example text to build on</p>
-                            <button type="submit" class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem
-                                ipsum</button>
+                            <button type="submit"
+                                class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem5</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
@@ -267,7 +300,7 @@
             <h2 class="main-white-color">Lovking For The Time IT Business Solution</h2>
             <p class="secondary-color font-exo">Lorem ipsum dolor sit amet consectetur.</p>
         </div>
-        <button type="submit" class="btn btn-color font-exo rounded-5 active">Get Started</button>
+        <button type="submit" class="btn btn-color font-exo rounded-5 active  px-4 py-3">Get Started</button>
     </section>
 
     <section class="footer ">
@@ -279,10 +312,13 @@
                     elit. Ut ipsa autem quibusdam mollitia odit ducimus
                     omnis quos architecto accusantium nemo?</p>
                 <div class="social-media d-flex  align-items-center gap-3">
-                    <div class="circle d-flex flex-column justify-content-center align-items-center"> 
-                        <i class="bi bi-facebook fs-4 color-icon-black" ></i> </div>
-                    <div class="circle d-flex justify-content-center align-items-center"> <i class="bi bi-instagram fs-4 color-icon-black"  ></i></div>
-                    <div class="circle d-flex justify-content-center align-items-center"> <i class="bi bi-twitter-x  fs-4 color-icon-black" ></i></div>
+                    <div class="circle d-flex flex-column justify-content-center align-items-center">
+                        <i class="bi bi-facebook fs-4 color-icon-black"></i>
+                    </div>
+                    <div class="circle d-flex justify-content-center align-items-center"> <i
+                            class="bi bi-instagram fs-4 color-icon-black"></i></div>
+                    <div class="circle d-flex justify-content-center align-items-center"> <i
+                            class="bi bi-twitter-x  fs-4 color-icon-black"></i></div>
                     <a href="mailto:nooralkhouli99@gmail.com">
                         <div class="circle d-flex justify-content-center align-items-center">
 
