--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <p class="font-exo paragraph">Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Nostrum velit voluptatem ad adipisci.</p>
                 <div class="d-flex justify-content-center align-items-center gap-lg-4 gap-2">
-                    <button type="submit" class="btn btn-color font-exo active px-lg-4 py-lg-3">Lorem ipsum</button>
-                    <button type="submit" class="btn btn-color font-exo  px-lg-4 py-lg-3">Lorem ipsum</button>
+                    <button type="submit" class="btn btn-color font-exo active px-lg-4 py-lg-3 p-2">Lorem ipsum</button>
+                    <button type="submit" class="btn btn-color font-exo  px-lg-4 py-lg-3 p-2">Lorem ipsum</button>
                 </div>
             </div>
 
@@ -210,47 +210,51 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div
-                        class="card-slider d-flex flex-column justify-content-between align-items-center gap-4 mx-auto py-3">
+                    <div class="card d-flex flex-column  align-items-center justify-content-center text-center gap-3 mx-auto py-3"
+                        style="width: 18rem;">
                         <div class="circle-solution d-flex justify-content-center align-items-center">
                             <i class="bi bi-house-gear main-white-color icon-solution"></i>
                         </div>
-                        <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
-                            <p class="card-text main-white-color m-0">Some quick example text to build on</p>
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center  gap-3">
+                            <p class="m-0">Some quick example text to build on the card title and make up the bulk of the
+                                content.</p>
                             <button type="submit"
-                                class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem1</button>
+                                class="btn btn-color font-exo active w-50 text-nowrap p-2 ">Lorem1</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
                         </div>
                     </div>
                 </div>
+
                 <div class="carousel-item">
-                    <div
-                        class="card-slider d-flex flex-column justify-content-between align-items-center gap-4 mx-auto py-3">
+                    <div class="card d-flex flex-column  align-items-center justify-content-center text-center gap-3 mx-auto py-3"
+                        style="width: 18rem;">
                         <div class="circle-solution d-flex justify-content-center align-items-center">
                             <i class="bi bi-house-lock main-white-color icon-solution"></i>
                         </div>
-                        <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
-                            <p class="card-text main-white-color m-0">Some quick example text to build on</p>
-                            <button type="submit"
-                                class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem2</button>
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center  gap-3">
+                            <p class="m-0">Some quick example text to build on the card title and make up the bulk of the
+                                content.</p>
+                            <button type="submit" class="btn btn-color font-exo active w-50 text-nowrap p-2 ">Lorem2</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
                         </div>
                     </div>
                 </div>
+
                 <div class="carousel-item">
                     <div
-                        class="card-slider d-flex flex-column justify-content-between align-items-center gap-4 mx-auto py-3">
+                        class="card d-flex flex-column  align-items-center justify-content-center text-center gap-3 mx-auto py-3"
+                        style="width: 18rem;">
                         <div class="circle-solution d-flex justify-content-center align-items-center">
                             <i class="bi bi-house-door main-white-color icon-solution"></i>
                         </div>
-                        <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
-                            <p class="card-text main-white-color m-0">Some quick example text to build on</p>
-                            <button type="submit"
-                                class="btn btn-color font-exo active w-50 text-nowrap p-2">lorem3</button>
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center  gap-3">
+                            <p class="m-0">Some quick example text to build on the card title and make up the bulk of the
+                                content.</p>
+                            <button type="submit" class="btn btn-color font-exo active w-50 text-nowrap p-2 ">Lorem3</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
@@ -259,14 +263,15 @@
                 </div>
                 <div class="carousel-item ">
                     <div
-                        class="card-slider d-flex flex-column justify-content-between align-items-center gap-4 mx-auto py-3">
+                        class="card d-flex flex-column  align-items-center justify-content-center text-center gap-3 mx-auto py-3"
+                        style="width: 18rem;">
                         <div class="circle-solution d-flex justify-content-center align-items-center">
                             <i class="bi bi-house-up main-white-color icon-solution"></i>
                         </div>
-                        <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
-                            <p class="card-text main-white-color m-0">Some quick example text to build on</p>
-                            <button type="submit"
-                                class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem4</button>
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center  gap-3">
+                            <p class="m-0">Some quick example text to build on the card title and make up the bulk of the
+                                content.</p>
+                            <button type="submit" class="btn btn-color font-exo active w-50 text-nowrap p-2 ">Lorem4</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
@@ -275,14 +280,15 @@
                 </div>
                 <div class="carousel-item">
                     <div
-                        class="card-slider d-flex flex-column justify-content-between align-items-center gap-4 mx-auto py-3">
+                        class="card d-flex flex-column  align-items-center justify-content-center text-center gap-3 mx-auto py-3"
+                        style="width: 18rem;">
                         <div class="circle-solution d-flex justify-content-center align-items-center">
                             <i class="bi bi-house-heart main-white-color icon-solution"></i>
                         </div>
-                        <div class="card-body text-center d-flex flex-column gap-3 align-items-center">
-                            <p class="card-text main-white-color m-0">Some quick example text to build on</p>
-                            <button type="submit"
-                                class="btn btn-color font-exo active w-50 text-nowrap p-2">Lorem5</button>
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center  gap-3">
+                            <p class="m-0">Some quick example text to build on the card title and make up the bulk of the
+                                content.</p>
+                            <button type="submit" class="btn btn-color font-exo active w-50 text-nowrap p-2 ">Lorem5</button>
                             <h6 class="main-white-color">
                                 Lorem ipsum dolor sit amet.
                             </h6>
